# phising-detection-demo

./: README.md  app.py  common.py  pyproject.toml  requirements.txt
